syntax = "proto3";

package proto;

import "common.proto";
import "google/api/annotations.proto";


option  go_package = "github.com/lc-1010/OneBlogService/proto";

service TagService{
    rpc GetTagList(GetTagListRequst) returns (GetTagListReply){
        option(google.api.http) = {
            get:"/api/v1/tags"
        };
    }
}

message GetTagListRequst{
    string name = 1;
    uint32 state = 2;
}

message Tag {
    int64 id = 1;
    string name = 2;
    uint32 state =3;
}

message GetTagListReply {
    repeated Tag list = 1;
    Pager pager = 2;
}